[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Renogare-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/Mauri_Car_Cover.png" type="Texture" id=3]
[ext_resource path="res://images/Fondo.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
modulate = Color( 0.552941, 0.552941, 0.552941, 1 )
position = Vector2( 960, 521.312 )
scale = Vector2( 2, 1.48 )
texture = ExtResource( 4 )

[node name="Mauri_Car_Cover" type="Sprite" parent="."]
position = Vector2( 1456.46, 325.261 )
scale = Vector2( 21.92, 21.92 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 589.188
margin_top = 22.9821
margin_right = 1336.19
margin_bottom = 495.982
custom_fonts/font = SubResource( 2 )
text = "Maurio
Kart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvlselector" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 90.0
margin_top = 880.0
margin_right = 590.0
margin_bottom = 980.0
rect_pivot_offset = Vector2( 249.589, 52.7009 )
custom_fonts/font = SubResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
margin_left = 700.0
margin_top = 880.0
margin_right = 1200.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 1300.0
margin_top = 880.0
margin_right = 1800.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="lvlselector" to="." method="_on_lvlselector_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
